--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body{
 h1{
   font-size: 50px;
   text-transform: uppercase;
+  padding-top: 100px;
 }
 
 h2{
@@ -62,6 +63,10 @@ hr{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  /*transform: perspective(500px) translate3d(10px,0px,0px);*/
 }
 
 .navbar{
@@ -100,12 +105,12 @@ hr{
 
 .hero-section{
   position: relative;
-  /*background: url(img/header.jpg) no-repeat;*/
-  /*background-size: cover;
-  background-position: center;*/
-  padding-top: 85px;
+  /* background: url(img/header.jpg) no-repeat; */
+  /* padding-top: 85px; */
   padding-bottom: 70px;
   display: block;
+  height: 100%;
+  overflow: hidden;
 }
 
 .hero-section p{
@@ -296,6 +301,139 @@ hr{
   opacity: 1;
   font-size: 24px;
 }
+
+
+/*////////////LIGHTBOX/////////////////*/
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(11,11,11, .8);
+  transition: all 600ms ease-in-out;
+}
+
+.stop-scroll{
+  overflow: hidden;
+}
+
+.mySlides img{
+  max-width: 600px;
+  -webkit-box-shadow: 0px 0px 4px 1px rgba(51,51,51,1);
+  -moz-box-shadow: 0px 0px 4px 1px rgba(51,51,51,1);
+  box-shadow: 0px 0px 4px 1px rgba(51,51,51,1);
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: transparent;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  border: none;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: relative;
+  /* top: 30px; */
+  /* right: 25px; */
+  font-size: 25px;
+  /* font-weight: bold; */
+  float: none;
+  left: 293px;
+  text-shadow: none;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: all 200ms ease-in-out;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  transform: translateY(-4px);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: -40px;
+  right: 260px;
+}
+
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+img.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
+
+/*///////////////////////////*/
 
 @media (max-width: 770px) {
   .nav-item:nth-child(1){
