--- a/styles.css
+++ b/styles.css
@@ -385,8 +385,7 @@ hr{
   margin:0 auto;
   display:block;
 }
-.prev,
-.next {
+.arrow {
   cursor: pointer;
   position: absolute;
   top: 60%;
@@ -407,7 +406,7 @@ hr{
   border-radius: 3px 0 0 3px;
 }
 
-.prev:hover, .next:hover {
+.arrow:hover {
   transform: translateY(-4px);
 }
 
@@ -432,6 +431,7 @@ hr{
 .footer .icons {
   font-size: 30px;
   margin: 0 15px;
+  cursor: pointer;
 }
 
 .icons i{
@@ -439,7 +439,7 @@ hr{
 }
 
 .icons:hover i{
-  color: #333;
+  color: #f7938c;
   -webkit-transform: rotate(360deg);
   transform: rotate(360deg);
 }
@@ -462,33 +462,36 @@ hr{
   .sliders-wrapper{
     width:100%;
   }
-/*
-  .prev,
-  .next {
-    display: none;
-  }*/
-
-    .navbar{
-      background-color: rgba(51,51,51,0.8);
-    }
+  .navbar{
+    background-color: rgba(51,51,51,0.8);
+  }
 }
 
 @media (max-width: 576px) {
 
+  .centred-wrapper{
+    padding: 50px 0;
+  }
+
   h1{
-    font-size: 40px;
-    padding-top: 45px;
+    font-size: 39px;
+    padding-top: 55px;
   }
 
   .hero-section{
     padding-bottom: 0;
   }
 
+  .hero-section p{
+    font-size: 17px;
+    padding-bottom: 25px;
+  }
+
   .modal{
     padding-top: 160px;
   }
 
-  .prev, .next{
+  .arrow{
     top: 63%;
   }
 }
