--- a/css/styles.css
+++ b/css/styles.css
@@ -255,8 +255,7 @@ hr {
     transform: scale(1) translateY(0);
     opacity: 1; } }
 .white-sections {
-  color: #333;
-  /* animation loop */ }
+  color: #333; }
   .white-sections p {
     color: #777; }
   .white-sections hr {
@@ -314,6 +313,10 @@ hr {
     width: 100%; }
   .projects-section .img-wrapper:hover .orange-layer {
     opacity: 1;
+    -ms-transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
     transform: rotateY(0deg); }
 
 .orange-layer {
@@ -322,7 +325,15 @@ hr {
   height: 100%;
   width: 100%;
   opacity: 0;
+  z-index: 1;
+  -ms-transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
+  -ms-transform: rotateY(90deg);
+  -webkit-transform: rotateY(90deg);
+  -moz-transform: rotateY(90deg);
+  -o-transform: rotateY(90deg);
   transform: rotateY(90deg); }
   .orange-layer p {
     text-align: center;
@@ -340,7 +351,6 @@ hr {
       opacity: 1;
       font-size: 24px; }
 
-/*////////////LIGHTBOX/////////////////*/
 .modal {
   display: none;
   position: fixed;
@@ -363,10 +373,12 @@ hr {
     -moz-box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.3);
     opacity: 0.3;
-    animation: imgDown 500ms ease-in-out forwards;
+    -webkit-animation: imgIn 500ms ease-in-out forwards;
+    -moz-animation: imgIn 500ms ease-in-out forwards;
+    animation: imgIn 500ms ease-in-out forwards;
     cursor: pointer; }
 
-@keyframes imgDown {
+@keyframes imgIn {
   0% {
     opacity: 0.3; }
   100% {
