--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -183,7 +183,6 @@ hr{
 
 .navbar-light{
   transition: all 200ms ease-in-out;
-
   a{
     color: $light-muted-text !important;
     &:hover{
@@ -288,11 +287,9 @@ hr{
     -webkit-transform-origin: 50% 100%;
     transform-origin: 50% 100%;
   }
-
   80%{
     opacity: 1;
   }
-
   100%{
     transform: scale(1) translateY(0);
     opacity: 1;
@@ -308,8 +305,6 @@ hr{
     background-color: $website-main-colour;
     margin: 25px auto;
   }
-
-  /* animation loop */
 
   $delay: 0ms;
   @for $i from 0 to 4 {
@@ -364,6 +359,10 @@ hr{
    &:hover{
        .orange-layer{
          opacity: 1;
+         -ms-transform: rotateY(0deg);
+         -webkit-transform: rotateY(0deg);
+         -moz-transform: rotateY(0deg);
+         -o-transform: rotateY(0deg);
          transform: rotateY(0deg);
       }
     }
@@ -376,8 +375,17 @@ hr{
   height: 100%;
   width: 100%;
   opacity: 0;
+  z-index: 1;
+  -ms-transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
+  -ms-transform: rotateY(90deg);
+  -webkit-transform: rotateY(90deg);
+  -moz-transform: rotateY(90deg);
+  -o-transform: rotateY(90deg);
   transform: rotateY(90deg);
+
   p{
     text-align: center;
     color: white;
@@ -397,8 +405,6 @@ hr{
     }
   }
 }
-
-/*////////////LIGHTBOX/////////////////*/
 
 .modal {
   display: none;
@@ -424,12 +430,14 @@ hr{
    -moz-box-shadow:  0px 0px 4px 3px rgba(0,0,0,.3);
    box-shadow: 0px 0px 4px 3px rgba(0,0,0,.3);
    opacity: 0.3;
-   animation: imgDown 500ms ease-in-out forwards;
+   -webkit-animation: imgIn 500ms ease-in-out forwards;
+   -moz-animation: imgIn 500ms ease-in-out forwards;
+   animation: imgIn 500ms ease-in-out forwards;
    cursor: pointer;
  }
 }
 
-@keyframes imgDown{
+@keyframes imgIn{
   0%{
     opacity: 0.3;
   }
