--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,8 @@ hr {
   padding-bottom: 70px;
   display: block;
   overflow: hidden;
-  height: 100%; }
+  height: 100%;
+  min-height: 500px; }
   .hero-section p {
     padding-bottom: 50px;
     color: rgba(255, 255, 255, 0.7);
@@ -481,13 +482,13 @@ hr {
     padding: 50px 0; }
 
   h1 {
-    font-size: 39px;
+    font-size: 35px;
     padding-top: 55px; }
 
   .hero-section {
     padding-bottom: 0; }
     .hero-section p {
-      font-size: 17px;
+      font-size: 15px;
       padding-bottom: 25px; }
 
   .modal {
